# market-reasearch

./: .env-sample  .gitignore  Enhancemenrs.md  MARKET_ANALYSIS_GUIDE.md  README.md  aapl_report.md  ai_analyzer.py  backtesting-engine.py  backtesting_engine.py  core_requirements.txt  generate_reports.py  main.py  main_bvackup.py  market_analysis.py  option-chain-analysis.py  option_chain_analysis.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  risk-manager.py  risk_manager.py  run.sh  run_trading_bot.py  setup.py  tech_indicators.py  test_ai_analysis.py  test_groq_connection.py  test_integration.py  trading_bot.py  update_nifty50.py
analysis/: __init__.py  fundamental.py  technical.py
config/: __init__.py  app_config.json  stock_config.py  stocks.json
data/: __init__.py  fetcher.py
reports/: AAPL_report_2025-11-06.html  AAPL_report_2025-11-06.json
src/models/: backtester.py  risk_manager.py
src/strategies/: __init__.py  moving_average_crossover.py
src/utils/: data_utils.py
tests/: conftest.py  test_market_analysis.py
visualization/: __init__.py  plotter.py
