[project]
name = "market-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.5",
    "beautifulsoup4>=4.12.0",
    "ddgs>=0.1.0",
    "duckduckgo-search>=8.1.1",
    "groq>=0.33.0",
    "lxml>=4.9.0",
    "matplotlib>=3.7.0",
    "mplfinance>=0.12.10b0",
    "nsepython>=1.7",
    "numpy>=1.22.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "yfinance>=0.2.66",
]
