[project]
name = "market-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.5",
    "beautifulsoup4>=4.9.0",
    "ddgs>=0.1.0",
    "duckduckgo-search>=8.1.1",
    "groq>=0.33.0",
    "loguru>=0.5.3",
    "lxml>=4.6.0",
    "matplotlib>=3.4.0",
    "mplfinance>=0.12.10b0",
    "nsepython>=1.7",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pandas-ta>=0.3.14b0",
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "pytz>=2021.1",
    "requests>=2.25.0",
    "scikit-learn>=0.24.0",
    "scipy>=1.7.0",
    "tabulate>=0.9.0",
    "tqdm>=4.60.0",
    "yfinance>=0.2.0",
]
